# qxtweb-standalone

./: .gitignore  meson.build  meson_options.txt
doc/example/: main.cpp  myservice.h
src/: meson.build
src/QxtNetwork/: QxtSslServer
src/QxtWeb/: QxtHttpServerConnector  QxtHttpSessionManager  QxtWebContent  QxtWebPageEvent  QxtWebSlotService
src/core/: meson.build  qxtboundcfunction.h  qxtboundfunction.h  qxtboundfunctionbase.h  qxtfifo.cpp  qxtfifo.h  qxtglobal.h  qxtmetaobject.cpp  qxtmetaobject.h  qxtmetatype.h  qxtnull.cpp  qxtnull.h  qxtnullable.h
src/network/: meson.build  qxtsslserver.cpp  qxtsslserver.h
src/web/: meson.build  qhttpheader.cpp  qhttpheader.h  qxtabstracthttpconnector.cpp  qxtabstracthttpconnector.h  qxtabstractwebservice.cpp  qxtabstractwebservice.h  qxtabstractwebsessionmanager.cpp  qxtabstractwebsessionmanager.h  qxtabstractwebsessionmanager_p.h  qxthtmltemplate.cpp  qxthtmltemplate.h  qxthttpserverconnector.cpp  qxthttpsessionmanager.cpp  qxthttpsessionmanager.h  qxtscgiserverconnector.cpp  qxtwebcgiservice_p.h  qxtwebcontent.cpp  qxtwebcontent.h  qxtwebevent.cpp  qxtwebevent.h  qxtwebservicedirectory.cpp  qxtwebservicedirectory.h  qxtwebservicedirectory_p.h  qxtwebslotservice.cpp  qxtwebslotservice.h
