# Qt5 Certificate Addon project build options
#============================================================================

# compiler args
#============================================================================

option(
    'ldflags',
    type : 'array',
    value : [
        '-L/usr/local/lib',
        '-L/usr/lib',
        '-L/lib'],
    description : 'Link flags')


option(
    'cxxflags',
    type : 'array',
    value : [
        '-Wdeprecated', 
        '-Wno-non-virtual-dtor',
        '-Wno-unused-parameter'],
    description : 'C build flags')

option(
    'with_tests',
    type : 'boolean',
    value : 'false',
    description : 'Build tomahawk with tests',
    yield : true)

# link args
#============================================================================


option(
    'qt5_link_args', 
    type : 'array', 
    value : [
        '-I/usr/lib/qt',
        '-lQt5Core',
        '-lQt5Concurrent',
        '-lQt5Gui',
        '-lQt5Network',
        '-lQt5Sql',
        '-lQt5Svg',
        '-lQt5UiTools',
        '-lQt5Widgets',
        '-lQt5Xml'],
    description : 'link args for Qt5',
    yield : true)


option(
    'qt5_x11_link_args', 
    type : 'string', 
    value : '-lQt5X11Extras',
    description : 'link args for Qt5',
    yield : true)


# optional dependancies
#============================================================================
